# lorscan

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: bazaarofmagic_set_map.toml
deploy/macmini/: install.sh  tech.ityou.lorscan.plist.template
docker/: entrypoint.sh
docs/deploy/: macmini.md
docs/plans/: 2026-04-26-marketplace-stock-design.md  2026-04-26-marketplace-stock-plan.md  2026-04-27-lorcanajson-buy-links-plan.md
docs/superpowers/notes/: 2026-04-25-task-14-baseline.md  TODO.md
docs/superpowers/plans/: 2026-04-25-lorscan-plan-1-foundation.md
docs/superpowers/specs/: 2026-04-25-lorscan-design.md
src/lorscan/: __init__.py  cli.py  config.py
src/lorscan/app/: __init__.py  main.py
src/lorscan/app/routes/: collection.py  scan.py
src/lorscan/services/: buy_links.py  card_detection.py  catalog.py  cert.py  embeddings.py  image_cache.py  matching.py  network.py  photos.py  scan_result.py  sets.py  visual_scan.py
src/lorscan/storage/: db.py  models.py
tests/: conftest.py
tests/fixtures/api/: cards-page-1.json
tests/fixtures/claude/: good-3x3.json  malformed.txt
tests/fixtures/lorcana_json/: allCards.subset.json
tests/integration/: test_cli_scan.py  test_marketplace_sweep.py  test_recognition_client.py  test_routes_smoke.py
tests/unit/: test_card_detection.py  test_catalog.py  test_cli_credentials.py  test_cli_marketplaces.py  test_config.py  test_db_catalog_ops.py  test_db_marketplace_ops.py  test_db_migrations.py  test_db_migrations_007.py  test_db_migrations_008.py  test_db_migrations_009.py  test_db_migrations_010.py  test_embeddings.py  test_empty_slot_detection.py  test_image_cache.py  test_matching.py  test_network_and_cert.py  test_photos.py  test_recognition_parser.py  test_recognition_prompt.py  test_rotation_detection.py  test_single_card_mode.py  test_smoke.py
tests/unit/__snapshots__/: test_recognition_prompt.ambr
tests/unit/services/: test_buy_links.py  test_catalog.py
(+46 files in other folders)
